--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ a.active ,a:hover{
 }
 
 section{
-    background: url(./Snapchat-1796287752.jpg) no-repeat;
+    background: url(./IMG-20210816-WA0140.jpg) no-repeat;
     background-size: cover;
     height: calc(100vh - 80px);
 }
